# Moongy_Django

./: .gitignore  pyproject.toml
ecommerce/: db.sqlite3
ecommerce/api/: views.py
ecommerce/ecommerce/: .env.example  settings.py  urls.py
ecommerce/ecommerce/static/css/: main.css
ecommerce/ecommerce/static/js/: cart.js
ecommerce/store/: models.py  serializers.py  urls.py  utils.py  views.py
ecommerce/store/migrations/: 0001_initial.py  0002_alter_shippingaddress_address.py  0003_product_image.py
ecommerce/store/templates/store/: cart.html  checkout.html  main.html  store.html
