[tool.poetry]
name = "ecommerce-app"
version = "0.1.0"
description = ""
authors = ["Ricardo Ferreira <rferreira@clevernet.pt>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.2"
flake8 = "^7.2.0"
black = "^25.1.0"
pillow = "^11.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
